changed z-index of tag items so they're no longer covered by the label in float label style.

--- a/arctic/static/arctic/src/assets/scss/components/selectize/_selectize.scss
+++ b/arctic/static/arctic/src/assets/scss/components/selectize/_selectize.scss
@@ -68,6 +68,7 @@ $marginMedium: 10px;
         background-color: $highlight-background;
         border-radius: $border-radius-sm;
         border: 1px solid transparent;
+        z-index: 3;
     }
 
     .remove {
